--- a/my_blog/templates/layouts/header.html
+++ b/my_blog/templates/layouts/header.html
@@ -1,4 +1,4 @@
-<ul class="nav justify-content-center text-center">
+{% comment %} <ul class="nav justify-content-center text-center">
       <li class="nav-item">
         <a class="nav-link fs-3" aria-current="page" href="{% url 'home'%}">Home</a>
       </li>
@@ -14,4 +14,4 @@
       <li class="nav-item">
         <a class="nav-link fs-3" href="{%url 'contact'%}">contact</a>
       </li>
-</ul>
+</ul> {% endcomment %}
