--- a/Barer_shop/templates/layouts/nav.html
+++ b/Barer_shop/templates/layouts/nav.html
@@ -1,29 +1,30 @@
+{%load static%}
 <nav id="sidebarMenu" class="col-md-4 col-lg-3 d-md-block sidebar collapse p-0">
 
     <div class="position-sticky sidebar-sticky d-flex flex-column justify-content-center align-items-center">
         <a class="navbar-brand" href="index.html">
-            <img src="images/templatemo-barber-logo.png" class="logo-image img-fluid" align="">
+            <img src="{% static 'images/templatemo-barber-logo.png'%}" class="logo-image img-fluid" align="">
         </a>
 
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link click-scroll" href="#section_1">Home</a>
+                <a class="nav-link click-scroll" href="{% url 'home' %}">Home</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link click-scroll" href="#section_2">Our Story</a>
+                <a class="nav-link click-scroll" href="{% url 'our_story'%}">Our Story</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link click-scroll" href="#section_3">Services</a>
+                <a class="nav-link click-scroll" href="{% url 'service'%}">Services</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link click-scroll" href="#section_4">Price List</a>
+                <a class="nav-link click-scroll" href="{% url 'price_list'%}">Price List</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link click-scroll" href="#section_5">Contact</a>
+                <a class="nav-link click-scroll" href="{% url 'contact'%}">Contact</a>
             </li>
         </ul>
     </div>
