--- a/Barer_shop/templates/base.html
+++ b/Barer_shop/templates/base.html
@@ -8,6 +8,7 @@
     <meta name="author" content="">
     <title>Gentlemen's Barber Shop - HTML CSS Template</title>
     <!-- CSS FILES -->        
+    <link rel="website icon" type="svg" href="{% static 'images/django-icon.svg' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@300;500&display=swap" rel="stylesheet">
