--- a/my_blog/templates/pages/project.html
+++ b/my_blog/templates/pages/project.html
@@ -1,5 +1,9 @@
 {% extends "base.html"%}
+{%load static %}
 
 {% block  project %}
-    <h1 class="text-center">Project</h1>
+    <div class="container">
+        <h1 class="text-center">Project</h1>
+        <img src={%static "images/Django.png"%} alt="error" class="django"/>
+    </div>
 {% endblock project  %}
