--- a/Barer_shop/templates/base.html
+++ b/Barer_shop/templates/base.html
@@ -114,80 +114,7 @@
 
             {% block contact %}{% endblock contact %}
 
-            <footer class="site-footer">
-                <div class="container">
-                    <div class="row">
-
-                        <div class="col-lg-12 col-12">
-                            <h4 class="site-footer-title mb-4">Our Branches</h4>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 col-11">
-                            <div class="site-footer-thumb">
-                                <strong class="mb-1">
-                                    {% for e in data %}
-                                        {{e.branche}}
-                                    {% endfor %}
-                                </strong>
-
-                                <p>{% for e in data %}
-                                    {{e.location}}
-                                {% endfor %}
-                            </p>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 col-11">
-                            <div class="site-footer-thumb">
-                                <strong class="mb-1">
-                                    {% for e in data %}
-                                        {{e.branche2}}
-                                    {% endfor %}
-                                </strong>
-
-                                <p>
-                                    {% for e in data %}
-                                        {{e.location2}}
-                                    {% endfor %}
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 col-11">
-                            <strong class="mb-1">
-                                {% for e in data %}
-                                    {{e.branche3}}
-                                {% endfor %}
-                            </strong>
-
-                            <p>
-                                {% for e in data %}
-                                    {{e.location3}}
-                                {% endfor %}
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="site-footer-bottom">
-                    <div class="container">
-                        <div class="row align-items-center">
-
-                            <div class="col-lg-8 col-12 mt-4">
-                                <p class="copyright-text mb-0">Copyright © 2036 Barber Shop 
-                                - Design: <a href="https://templatemo.com" rel="nofollow" target="_blank">TemplateMo</a></p>
-                            </div>
-
-                            <div class="col-lg-2 col-md-3 col-3 mt-lg-4 ms-auto">
-                                <a href="#section_1" class="back-top-icon smoothscroll" title="Back Top">
-                                    <i class="bi-arrow-up-circle"></i>
-                                </a>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </footer>
+            {% include "layouts/Footer.html" %}
             
         </div>
 
