--- a/drcare/templates/pages/blog.html
+++ b/drcare/templates/pages/blog.html
@@ -25,7 +25,7 @@
         
         <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
         <link rel="stylesheet" href="{% static 'css/icomoon.css' %}">
-        <link rel="stylesheet" href="{% static 'scss/style.css'%}">
+        <link rel="stylesheet" href="{% static 'css/style.css'%}">
     </head>
   <body>
     {% include "layouts/nav.html" %}
