--- a/drcare/templates/pages/department.html
+++ b/drcare/templates/pages/department.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -24,13 +25,13 @@
         
         <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
         <link rel="stylesheet" href="{% static 'css/icomoon.css' %}">
-        <link rel="stylesheet" href="{% static 'scss/style.css'%}">
+        <link rel="stylesheet" href="{% static 'css/style.css'%}">
     </head>
   <body>
     {% include "layouts/nav.html" %}
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('{% static 'images/bg_1.jpg' %}');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
@@ -74,7 +75,7 @@
 	              <div class="tab-pane py-2 fade show active" id="v-pills-1" role="tabpanel" aria-labelledby="day-1-tab">
 	              	<div class="row departments">
 	              		<div class="col-lg-4 order-lg-last d-flex align-items-stretch">
-	              			<div class="img d-flex align-self-stretch" style="background-image: url(images/dept-1.jpg);"></div>
+	              			<div class="img d-flex align-self-stretch" style="background-image: url({% static 'images/dept-1.jpg' %});"></div>
 	              		</div>
 	              		<div class="col-lg-8">
 	              			<h2>Neurological Deparments</h2>
@@ -124,7 +125,7 @@
 	              <div class="tab-pane fade" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-day-2-tab">
 	              	<div class="row departments">
 	              		<div class="col-lg-4 order-lg-last d-flex align-items-stretch">
-	              			<div class="img d-flex align-self-stretch" style="background-image: url(images/dept-2.jpg);"></div>
+	              			<div class="img d-flex align-self-stretch" style="background-image: url({% static 'images/dept-2.jpg' %});"></div>
 	              		</div>
 	              		<div class="col-md-8">
 	              			<h2>Surgical Deparments</h2>
@@ -173,7 +174,7 @@
 	              <div class="tab-pane fade" id="v-pills-3" role="tabpanel" aria-labelledby="v-pills-day-3-tab">
 	              	<div class="row departments">
 	              		<div class="col-lg-4 order-lg-last d-flex align-items-stretch">
-	              			<div class="img d-flex align-self-stretch" style="background-image: url(images/dept-3.jpg);"></div>
+	              			<div class="img d-flex align-self-stretch" style="background-image: url({% static 'images/dept-3.jpg' %});"></div>
 	              		</div>
 	              		<div class="col-md-8">
 	              			<h2>Dental Deparments</h2>
@@ -223,7 +224,7 @@
 	              <div class="tab-pane fade" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-day-4-tab">
 	              	<div class="row departments">
 	              		<div class="col-lg-4 order-lg-last d-flex align-items-stretch">
-	              			<div class="img d-flex align-self-stretch" style="background-image: url(images/dept-4.jpg);"></div>
+	              			<div class="img d-flex align-self-stretch" style="background-image: url({% static 'images/dept-4.jpg' %});"></div>
 	              		</div>
 	              		<div class="col-md-8">
 	              			<h2>Ophthalmology Deparments</h2>
@@ -273,7 +274,7 @@
 	              <div class="tab-pane fade" id="v-pills-5" role="tabpanel" aria-labelledby="v-pills-day-5-tab">
 	              	<div class="row departments">
 	              		<div class="col-lg-4 order-lg-last d-flex align-items-stretch">
-	              			<div class="img d-flex align-self-stretch" style="background-image: url(images/dept-5.jpg);"></div>
+	              			<div class="img d-flex align-self-stretch" style="background-image: url({% static 'images/dept-5.jpg' %});"></div>
 	              		</div>
 	              		<div class="col-md-8">
 	              			<h2>Cardiology Deparments</h2>
