--- a/drcare/templates/base.html
+++ b/drcare/templates/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/open-iconic-bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/animate.css' %}">
     
-    <link rel="stylesheet" href="{% static '"css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
 
@@ -34,7 +34,7 @@
     <!-- END nav -->
     
     <section class="home-slider owl-carousel">
-      <div class="slider-item" style="background-image:url({% static 'images/bg_1.jpg' %});" data-stellar-background-ratio="0.5">
+      <div class="slider-item" style="background-image:url("{% static 'images/bg_1.jpg' %}");" data-stellar-background-ratio="0.5">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row no-gutters slider-text align-items-center justify-content-start" data-scrollax-parent="true">
@@ -115,7 +115,7 @@
 		<section class="ftco-section ftco-no-pt ftc-no-pb">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-md-5 p-md-5 img img-2 mt-5 mt-md-0" style="background-image: url(images/about.jpg);">
+					<div class="col-md-5 p-md-5 img img-2 mt-5 mt-md-0" style="background-image: url({% static 'images/about.jpg' %});">
 					</div>
 					<div class="col-md-7 wrap-about py-4 py-md-5 ftco-animate">
 	          <div class="heading-section mb-5">
@@ -845,7 +845,7 @@
 				<div class="row">
           <div class="col-md-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.html" class="block-20" style="background-image: url('{% static 'images/image_1.jpg' %}');">
+              <a href="blog-single.html" class="block-20" style="background-image: url({% static 'images/image_1.jpg' %});">
 								<div class="meta-date text-center p-2">
                   <span class="day">23</span>
                   <span class="mos">January</span>
@@ -867,7 +867,7 @@
           </div>
           <div class="col-md-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.html" class="block-20" style="background-image: url('{% static 'images/image_2.jpg' %}');">
+              <a href="blog-single.html" class="block-20" style="background-image: url({% static 'images/image_2.jpg' %});">
 								<div class="meta-date text-center p-2">
                   <span class="day">23</span>
                   <span class="mos">January</span>
@@ -889,7 +889,7 @@
           </div>
           <div class="col-md-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.html" class="block-20" style="background-image: url('{% static 'images/image_3.jpg' %}');">
+              <a href="blog-single.html" class="block-20" style="background-image: url({% static 'images/image_3.jpg' %});">
 								<div class="meta-date text-center p-2">
                   <span class="day">23</span>
                   <span class="mos">January</span>
@@ -922,23 +922,24 @@
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
-  <script src="{% static 'js/jquery.min.js'%}"></script>
-  <script src="{% static 'js/jquery-migrate-3.0.1.min.js'%}"></script>
-  <script src="{% static 'js/popper.min.js'%}"></script>
-  <script src="{% static 'js/bootstrap.min.js'%}"></script>
-  <script src="{% static 'js/jquery.easing.1.3.js'%}"></script>
-  <script src="{% static 'js/jquery.waypoints.min.js'%}"></script>
-  <script src="{% static 'js/jquery.stellar.min.js'%}"></script>
-  <script src="{% static 'js/owl.carousel.min.js'%}"></script>
-  <script src="{% static 'js/jquery.magnific-popup.min.js'%}"></script>
-  <script src="{% static 'js/aos.js'%}"></script>
-  <script src="{% static 'js/jquery.animateNumber.min.js'%}"></script>
-  <script src="{% static 'js/bootstrap-datepicker.js'%}"></script>
-  <script src="{% static 'js/jquery.timepicker.min.js'%}"></script>
-  <script src="{% static 'js/scrollax.min.js'%}"></script>
+
+  <script src="{% static 'js/jquery.min.js' %}"></script>
+  <script src="{% static 'js/jquery-migrate-3.0.1.min.js' %}"></script>
+  <script src="{% static 'js/popper.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
+  <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+  <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
+  <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+  <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
+  <script src="{% static 'js/aos.js' %}"></script>
+  <script src="{% static 'js/jquery.animateNumber.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap-datepicker.js' %}"></script>
+  <script src="{% static 'js/jquery.timepicker.min.js' %}"></script>
+  <script src="{% static 'js/scrollax.min.js' %}"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="{% static 'js/google-map.js'%}"></script>
-  <script src="{% static 'js/main.js'%}"></script>
+  <script src="{% static 'js/google-map.js' %}"></script>
+  <script src="{% static 'js/main.js' %}"></script>
     
   </body>
 </html>
