--- a/drcare/templates/layouts/nav.html
+++ b/drcare/templates/layouts/nav.html
@@ -32,13 +32,13 @@
       <p class="button-custom order-lg-last mb-0"><a href="appointment.html" class="btn btn-secondary py-2 px-3">Make An Appointment</a></p>
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a href="{% url 'home' %}" class="nav-link pl-0">Home</a></li>
+            <li class="nav-item"><a href="{% url 'home' %}" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="{% url 'about' %}" class="nav-link">About</a></li>
             <li class="nav-item"><a href="{% url 'doctor' %}" class="nav-link">Doctor</a></li>
             <li class="nav-item"><a href="{% url 'department' %}" class="nav-link">Departments</a></li>
             <li class="nav-item"><a href="{% url 'pricing' %}" class="nav-link">Pricing</a></li>
             <li class="nav-item"><a href="{% url 'blog' %}" class="nav-link">Blog</a></li>
-            <li class="nav-item"><a href="{% url 'blog-singel' %}" class="nav-link">Blog</a></li>
+            <li class="nav-item"><a href="{% url 'blog-singel' %}" class="nav-link">Blog-Singel</a></li>
             <li class="nav-item"><a href="{% url 'contact' %}" class="nav-link">Contact</a></li>
         </ul>
       </div>
