--- a/Barer_shop/templates/pages/home.html
+++ b/Barer_shop/templates/pages/home.html
@@ -27,5 +27,5 @@
         <a href="#booking-section" class="smoothscroll btn custom-btn custom-btn-italic mt-3">Book a seat</a>
     </div>
 </section>
-
+{% include "layouts/footer.html" %}
 {% endblock home%}
