--- a/Barer_shop/templates/layouts/nav.html
+++ b/Barer_shop/templates/layouts/nav.html
@@ -2,7 +2,7 @@
 <nav id="sidebarMenu" class="col-md-4 col-lg-3 d-md-block sidebar collapse p-0">
 
     <div class="position-sticky sidebar-sticky d-flex flex-column justify-content-center align-items-center">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="{% url 'home' %}">
             <img src="{% static 'images/templatemo-barber-logo.png'%}" class="logo-image img-fluid" align="">
         </a>
 
