--- a/Barer_shop/templates/base.html
+++ b/Barer_shop/templates/base.html
@@ -19,6 +19,8 @@
 
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
+        <link href="{% static './images/django-icon.svg' %}" rel="stylesheet">
+
         <link href="{% static 'css/bootstrap-icons.css' %}" rel="stylesheet">
 
         <link href="{% static 'css/templatemo-barber-shop.css' %}" rel="stylesheet">
