--- a/Barer_shop/templates/pages/price_list.html
+++ b/Barer_shop/templates/pages/price_list.html
@@ -4,6 +4,7 @@
 {% block price_list %}
 <section class="price-list-section section-padding" id="section_4">
     <div class="container">
+        {% for i in price %}
         <div class="row">
 
             <div class="col-lg-8 col-12">
@@ -11,7 +12,7 @@
                     <div class="mb-4">
                         <h2 class="mb-2">Price List</h2>
 
-                        <strong>Starting at $25</strong>
+                        <strong>Starting at ${{i.starting}}</strong>
                     </div>
 
                     <div class="price-list-thumb">
@@ -19,7 +20,7 @@
                             Haircut
                             <span class="price-list-thumb-divider"></span>
 
-                            <strong>$32.00</strong>
+                            <strong>${{i.Haircut}}</strong>
                         </h6>
                     </div>
 
@@ -28,7 +29,7 @@
                             Beard Trim
                             <span class="price-list-thumb-divider"></span>
 
-                            <strong>$26.00</strong>
+                            <strong>${{i.Beard_Trim}}</strong>
                         </h6>
                     </div>
 
@@ -37,7 +38,7 @@
                             Razor Cut
                             <span class="price-list-thumb-divider"></span>
 
-                            <strong>$36.00</strong>
+                            <strong>${{i.Razor_Cut}}</strong>
                         </h6>
                     </div>
 
@@ -46,7 +47,7 @@
                             Shaves
                             <span class="price-list-thumb-divider"></span>
 
-                            <strong>$30.00</strong>
+                            <strong>${{i.Shaves}}</strong>
                         </h6>
                     </div>
 
@@ -55,17 +56,18 @@
                             Styling / Color
                             <span class="price-list-thumb-divider"></span>
 
-                            <strong>$25.00</strong>
+                            <strong>${{i.Styling_Color}}</strong>
                         </h6>
                     </div>
                 </div>
             </div>
 
             <div class="col-lg-4 col-12 custom-block-bg-overlay-wrap mt-5 mb-5 mb-lg-0 mt-lg-0 pt-3 pt-lg-0">
-                <img src="{% static 'images/vintage-chair-barbershop.jpg'%}" class="custom-block-bg-overlay-image img-fluid" alt="">
+                <img src="{{i.photo.url}}" class="custom-block-bg-overlay-image img-fluid" alt="Erorr">
             </div>
 
         </div>
+        {% endfor %}
     </div>
 </section>
 
