--- a/Barer_shop/templates/pages/our_story.html
+++ b/Barer_shop/templates/pages/our_story.html
@@ -17,50 +17,32 @@
 
                 <h6 class="mb-5">Meet Babers</h6>
 
-                    <div class="col-lg-5 col-12 custom-block-bg-overlay-wrap me-lg-5 mb-5 mb-lg-0">
-                        <img src="{% static 'images/barber/portrait-male-hairdresser-with-scissors.jpg'%}" class="custom-block-bg-overlay-image img-fluid" alt="">
+                {% for i in barber %}
+                <div class="col-lg-5 col-12 custom-block-bg-overlay-wrap me-lg-5 mb-5 mb-lg-0">
+                    <img src="{{i.Image.url}}" class="custom-block-bg-overlay-image img-fluid" alt="">
 
-                        <div class="team-info d-flex align-items-center flex-wrap">
-                            <p class="mb-0">Redo</p>
+                    <div class="team-info d-flex align-items-center flex-wrap">
+                        <p class="mb-0">{{i.name}}</p>
 
-                            <ul class="social-icon ms-auto">
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-facebook">
-                                    </a>
-                                </li>
+                        <ul class="social-icon ms-auto">
+                            <li class="social-icon-item">
+                                <a href="#" class="social-icon-link bi-facebook">
+                                </a>
+                            </li>
 
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-instagram">
-                                    </a>
-                                </li>
+                            <li class="social-icon-item">
+                                <a href="#" class="social-icon-link bi-instagram">
+                                </a>
+                            </li>
 
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-whatsapp">
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+                            <li class="social-icon-item">
+                                <a href="#" class="social-icon-link bi-whatsapp">
+                                </a>
+                            </li>
+                        </ul>
                     </div>
-
-                    <div class="col-lg-5 col-12 custom-block-bg-overlay-wrap mt-4 mt-lg-0 mb-5 mb-lg-0">
-                        <img src="{% static 'images/barber/portrait-mid-adult-bearded-male-barber-with-folded-arms.jpg'%}" class="custom-block-bg-overlay-image img-fluid" alt="">
-
-                        <div class="team-info d-flex align-items-center flex-wrap">
-                            <p class="mb-0">Sam</p>
-
-                            <ul class="social-icon ms-auto">
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-facebook">
-                                    </a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-instagram">
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-            </div>
+                </div>
+                {% endfor %}
 
         </div>
     </div>
