--- a/Barer_shop/templates/pages/service.html
+++ b/Barer_shop/templates/pages/service.html
@@ -9,54 +9,20 @@
             <div class="col-lg-12 col-12">
                 <h2 class="mb-5">Services</h2>
             </div>
-
+            {% for i in service %}
             <div class="col-lg-6 col-12 mb-4">
                 <div class="services-thumb">
-                    <img src="{% static 'images/services/woman-cutting-hair-man-salon.jpg'%}" class="services-image img-fluid" alt="">
+                    <img src="{{i.Image.url}}" class="services-image img-fluid" alt="">
 
                     <div class="services-info d-flex align-items-end">
-                        <h4 class="mb-0">Hair cut</h4>
+                        <h4 class="mb-0">{{i.Services}}</h4>
 
-                        <strong class="services-thumb-price">$36.00</strong>
+                        <strong class="services-thumb-price">${{i.Price}}</strong>
                     </div>
                 </div>
             </div>
+            {% endfor %}
 
-            <div class="col-lg-6 col-12 mb-4">
-                <div class="services-thumb">
-                    <img src="{% static 'images/services/hairdresser-grooming-their-client.jpg'%}" class="services-image img-fluid" alt="">
-
-                    <div class="services-info d-flex align-items-end">
-                        <h4 class="mb-0">Washing</h4>
-
-                        <strong class="services-thumb-price">$25.00</strong>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-6 col-12 mb-4 mb-lg-0">
-                <div class="services-thumb">
-                    <img src="{%static 'images/services/hairdresser-grooming-client.jpg'%}" class="services-image img-fluid" alt="">
-
-                    <div class="services-info d-flex align-items-end">
-                        <h4 class="mb-0">Shaves</h4>
-
-                        <strong class="services-thumb-price">$30.00</strong>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-6 col-12">
-                <div class="services-thumb">
-                    <img src="{% static 'images/services/boy-getting-haircut-salon-front-view.jpg'%}" class="services-image img-fluid" alt="">
-
-                    <div class="services-info d-flex align-items-end">
-                        <h4 class="mb-0">Kids</h4>
-
-                        <strong class="services-thumb-price">$25.00</strong>
-                    </div>
-                </div>
-            </div>
 
         </div>
     </div>
