--- a/Barer_shop/templates/base.html
+++ b/Barer_shop/templates/base.html
@@ -19,7 +19,7 @@
 
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
-        <link href="{% static './images/django-icon.svg' %}" rel="stylesheet">
+        <link href="{% static './images/django-icon.svg' %}" type="svg" rel="website icon">
 
         <link href="{% static 'css/bootstrap-icons.css' %}" rel="stylesheet">
 
