--- a/Barer_shop/templates/pages/our_story.html
+++ b/Barer_shop/templates/pages/our_story.html
@@ -26,12 +26,12 @@
 
                         <ul class="social-icon ms-auto">
                             <li class="social-icon-item">
-                                <a href="#" class="social-icon-link bi-facebook">
+                                <a href="https://www.facebook.com/" class="social-icon-link bi-facebook">
                                 </a>
                             </li>
 
                             <li class="social-icon-item">
-                                <a href="#" class="social-icon-link bi-instagram">
+                                <a href="https://www.instagram.com/" class="social-icon-link bi-instagram">
                                 </a>
                             </li>
 
