--- a/my_blog/templates/layouts/header.html
+++ b/my_blog/templates/layouts/header.html
@@ -1,4 +1,4 @@
-<ul class="nav justify-content-center text-center">
+<ul class="nav">
       <li class="nav-item">
         <a class="nav-link fs-3" aria-current="page" href="{% url 'home'%}">Home</a>
       </li>
@@ -6,7 +6,7 @@
         <a class="nav-link fs-3" href="{%url 'about'%}">about</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link fs-3" href="{% url 'my_blog'%}">my_blog</a>
+        <a class="nav-link fs-3" href="{% url 'blog'%}">my_blog</a>
       </li>
       <li class="nav-item">
         <a class="nav-link fs-3" href="{%url 'project'%}">project</a>
