--- a/my_blog/templates/base.html
+++ b/my_blog/templates/base.html
@@ -17,7 +17,8 @@
 
     {% block home %}{% endblock home %}
     {% block about %}{% endblock about %}
-    {% block my_blog %}{% endblock my_blog %}
+    {% block blog %}{% endblock blog %}
+    {% block blog_single %}{% endblock blog_single %}
     {% block project %}{% endblock project %}
     {% block contact %}{% endblock contact %}
 
