--- a/my_blog/templates/pages/home.html
+++ b/my_blog/templates/pages/home.html
@@ -4,7 +4,7 @@
 {% block home%}
 
     <div class="container">
-        <h1>Home</h1>
+        <h1 class="text-center">Home</h1>
         <img src={%static "images/Django.png"%} alt="error" class="django"/>
     </div>
 
