--- a/file/templates/index.html
+++ b/file/templates/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Style.CSS">
 </head>
 <body>
-    
+    {% for i in post %}
+        <div>Car name:{{i.name}}</div>
+        <h1>Car price:{{i.price}}</h1>
+        <h2>Car photo:{{i.photo.url}}</h2>
+        <h3>{{i.specs.url}}</h3>
+    {% endfor %}
 </body>
 </html>
